# messi-matches

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tsconfig.json  video.json  webpack.config.js
docs/: MessiMatches.ics  S2004-2005.md  S2005-2006.md  S2006-2007.md  S2007-2008.md  S2008-2009.md  S2009-2010.md  S2010-2011.md  S2011-2012.md  S2012-2013.md  S2013-2014.md  S2014-2015.md  S2015-2016.md  S2016-2017.md  S2017-2018.md  S2018-2019.md  S2019-2020.md  S2020-2021.md
frontend/: index.html  list.html  s2004-2005.html  s2005-2006.html  s2006-2007.html  s2007-2008.html  s2008-2009.html  s2009-2010.html  s2010-2011.html  s2011-2012.html  s2012-2013.html  s2013-2014.html  s2014-2015.html  s2015-2016.html  s2016-2017.html  s2017-2018.html  s2018-2019.html  s2019-2020.html  s2020-2021.html  stats.html
frontend/js/: list.bundle.js  lodash.js  main.bundle.js  main.js  match-videos.js  matches-meta.js  matches.js  stats.bundle.js  stats.bundle.js.LICENSE.txt  transformer.js
scrape/: axiosLocalStorage.ts  buildCalendar.ts  fileHelpers.ts  getAllFiles.ts  getMatches.ts  make-md.ts  make-ss.ts  match-helpers.ts  match-md-transfomers.ts  match-video.ts  types.ts
scrape/fotmob/: types.ts
scrape/messivscr/: fetch.ts
scrape/sofa/: analytic.ts  combine.ts  fetch-events.ts  fetch-incidents.ts  getdata.ts  processWithPage.ts  scrape.ts  types.ts
scrape/starplayerstats/: common.ts  extract-match-detail-helpers.ts  (+5 more)
scripts/: match-script.js  s2005-2006.js  s2007-2008.js  s2008-2009.js  s2009-2010.js  s2010-2011.js  s2011-2012.js  s2018-2019.js
(+41 files in other folders)
