[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Nguyen Khanh", email = "khanh@urbn8.com"},
]
dependencies = []
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "python3 src/analytics/test.py"